more on pmbm ais

--- a/_posts/2019-04-24-pmbm_ais.md
+++ b/_posts/2019-04-24-pmbm_ais.md
@@ -77,8 +77,13 @@ Liland (2007): “[AIS Aided Multi Hypothesis Tracker][Liland2017]”, Master’
 
 Supervisor: [Edmund Brekke].  
 
+
+|<img src="{{site.url}}/assets/MS_Nidarholm.jpg" width="700"> | 
+| Example application: The autonomous ferry [Milliampere] should be able to use AIS to for warm track initiation on the Munkholmen ferry. |
+
 [Edmund Brekke]: www.ntnu.edu/employees/edmund.brekke
 [Williams2015]: https://ieeexplore.ieee.org/document/7272821
 [Habtemariam2014]: https://www.sciencedirect.com/science/article/pii/S0165168414003636
 [Liland2017]: https://brage.bibsys.no/xmlui/bitstream/handle/11250/2452107/16477_FULLTEXT.pdf?sequence=1
 [Autosea]: https://www.ntnu.edu/autosea
+[Milliampere] https://www.ntnu.edu/autoferry
