more on pmbm ais

--- a/_posts/2019-04-24-pmbm_ais.md
+++ b/_posts/2019-04-24-pmbm_ais.md
@@ -86,4 +86,4 @@ Supervisor: [Edmund Brekke].
 [Habtemariam2014]: https://www.sciencedirect.com/science/article/pii/S0165168414003636
 [Liland2017]: https://brage.bibsys.no/xmlui/bitstream/handle/11250/2452107/16477_FULLTEXT.pdf?sequence=1
 [Autosea]: https://www.ntnu.edu/autosea
-[Milliampere] https://www.ntnu.edu/autoferry
+[Milliampere]: https://www.ntnu.edu/autoferry
