--- a/_posts/2019-04-24-pmbm_ais.md
+++ b/_posts/2019-04-24-pmbm_ais.md
@@ -79,7 +79,7 @@ Supervisor: [Edmund Brekke].
 
 
 |<img src="{{site.url}}/assets/MS_Nidarholm.jpg" width="700"> | 
-| Example application: The autonomous ferry [Milliampere] should be able to use AIS to for warm track initiation on the Munkholmen ferry. |
+| Example application: The autonomous ferry [Milliampere] should be able to use AIS to for warm track initiation on the Munkholmen ferry when it approaches under the bridge. |
 
 [Edmund Brekke]: www.ntnu.edu/employees/edmund.brekke
 [Williams2015]: https://ieeexplore.ieee.org/document/7272821
