more on pmbm  ais

--- a/_posts/2019-04-24-pmbm_ais.md
+++ b/_posts/2019-04-24-pmbm_ais.md
@@ -79,7 +79,7 @@ Supervisor: [Edmund Brekke].
 
 
 |<img src="{{site.url}}/assets/MS_Nidarholm.jpg" width="700"> | 
-| Example application 1: The autonomous ferry [Milliampere] should be able to use AIS to for warm track initiation on the Munkholmen ferry when it approaches under the bridge. |
+| Example application 1: The autonomous ferry [Milliampere] should be able to use AIS for warm track initiation on the Munkholmen ferry when it approaches under the bridge. |
 
 |<img src="{{site.url}}/assets/droneit.png" width="570"> | 
 | Example application 2: The same theory can be used for fusion of drone transponders with 3D airport surveillance radar. |
