--- a/_posts/2020-04-08-corona.md
+++ b/_posts/2020-04-08-corona.md
@@ -19,31 +19,24 @@ While these results probably will come too late to be of much use in the current
 
 ## Proposed Tasks for the 5th year project
 
-In the specialization project the main focus will be on mastering the fundamental building blocks of PMBM and radar-AIS fusion. The following tasks are proposed for the specialization project: 
+In the specialization project the main focus will be on building models for the epidemic, and investigating the feasibility of situational awareness. 
+The following tasks are proposed for the specialization project: 
 
-* Make yourself familiar with multi-target tracking, random finite sets, MHT and PMBM. 
-* Design simple toy scenarios that will enable careful analysis of the expected benefits of radar-AIS fusion. 
-* Revise the hypothesis structure of the PMBM filter so that its hypotheses not only are able to account for associations between measurements in consecutive radar scans, but also associations between these and AIS tracks. 
-* Revise the expressions for the probabilities of the association hypotheses according to the revision of the hypothesis structure. 
-* Revise the estimation of target kinematics according to the two data sources.
-* Test the revisions in simulations. 
+* Conduct a study on relevant literature on epidemic modelling in general and the coronavirus outbreak in particular.
+* Model the pandemic: Compare simulation-based models (e.g., cellular automata) with aggregate models (e.g., differential equations). 
+* State estimation: Using limited and possibly non-representative data: Estimate and predict the number of infections and infection rate. 
+* Parameter estimation: Estimate the infectiousness and case fatality ratio
+* Investigate how the different model parameters can affect the estimates. How reliable are the estimates? Perform consistency analysis.
 * Write report.
 
 ## Proposed Tasks for the master thesis
 
-In the MSc thesis the work should move from toy scenarios to more comprehensive simulations and real data. It is also desirable to strengthen the theoretical foundations of the work using the tools of random finite set theory such as functional derivatives. The following topics are expected to be of central importance. 
+In the MSc thesis the goal is to investigate the suitability of different infection control strategies. The following tasks are included in the MSc project:
 
-* Study mixture reduction techniques to limit the number of hypotheses. 
-* Benchmark against other approaches to AIS-radar fusion, such as Liland (2017) or Habtemariam (2014).
-* Generate more elaborate simulations and/or participate in field experiments to record real data. 
+* Include socio-economic impacts in the model. 
+* Experiment with different epidemic control strategies in closed-loop simulation where the estimation schemes from the specialization project are used by the policymakers. In particular, strategies based on model-predictive control (MPC) should be investigated. 
+* Increase the complexity and fidelity by modeling interaction between countries, age groups etc.  
 
-This project can be expanded into a PhD or integrated PhD for a candidate with sufficient skills, background knowledge and motivation. 
-
-|<img src="{{site.url}}/assets/giorgio-den-helder.jpeg" width="700"> | 
-| Giorgio Kufoalor during [Autosea] experiments in the Netherlands where AIS data were used |
-
-|<img src="{{site.url}}/assets/wilthilsyn.jpg" width="700"> | 
-| Erik Wilthil during [Autosea] experiments in Trondheimsfjorden where radar tracking was used |
 
 ## Prerequisites
 
