added coronavirus project 3

--- a/_posts/2020-04-08-corona.md
+++ b/_posts/2020-04-08-corona.md
@@ -45,7 +45,7 @@ In the MSc thesis the goal is to investigate the suitability of different infect
 ## References
 Pueyo, T. (2020). "[Coronavirus: The Hammer and the Dance.][Pueyo2020]", Medium.com.
 
-Habtemariam et al. (2014): “[Measurement levelAIS/radar fusion][Habtemariam2014]”, Signal Processing.
+Wilson, N. and Baker, M. G. (2009): “[The emerging influenza pandemic: estimating the case fatality ratio.][Wilson2009]”, Euro Surveill.
 
 Liland (2017): “[AIS Aided Multi Hypothesis Tracker][Liland2017]”, Master’s thesis, NTNU.
 
@@ -56,7 +56,7 @@ Supervisor: [Edmund Brekke].
 
 [Edmund Brekke]: www.ntnu.edu/employees/edmund.brekke
 [Pueyo2020]: https://medium.com/@tomaspueyo/coronavirus-the-hammer-and-the-dance-be9337092b56
-[Habtemariam2014]: https://www.sciencedirect.com/science/article/pii/S0165168414003636
+[Wilson2009]: https://www.ncbi.nlm.nih.gov/pubmed/19573509
 [Liland2017]: https://brage.bibsys.no/xmlui/bitstream/handle/11250/2452107/16477_FULLTEXT.pdf?sequence=1
 [Autosea]: https://www.ntnu.edu/autosea
 [Milliampere]: https://www.ntnu.edu/autoferry
