added coronavirus project 4

--- a/_posts/2020-04-08-corona.md
+++ b/_posts/2020-04-08-corona.md
@@ -47,7 +47,7 @@ Pueyo, T. (2020). "[Coronavirus: The Hammer and the Dance.][Pueyo2020]", Medium.
 
 Wilson, N. and Baker, M. G. (2009): “[The emerging influenza pandemic: estimating the case fatality ratio.][Wilson2009]”, Euro Surveill.
 
-Liland (2017): “[AIS Aided Multi Hypothesis Tracker][Liland2017]”, Master’s thesis, NTNU.
+Dorigatti et al. (2020): “[Report 4: Severity of 2019-novel coronavirus (nCoV)][Dorigatti2020]”, Imperial College London COVID-19 Response Team.
 
 
 ## Contact
@@ -57,6 +57,6 @@ Supervisor: [Edmund Brekke].
 [Edmund Brekke]: www.ntnu.edu/employees/edmund.brekke
 [Pueyo2020]: https://medium.com/@tomaspueyo/coronavirus-the-hammer-and-the-dance-be9337092b56
 [Wilson2009]: https://www.ncbi.nlm.nih.gov/pubmed/19573509
-[Liland2017]: https://brage.bibsys.no/xmlui/bitstream/handle/11250/2452107/16477_FULLTEXT.pdf?sequence=1
+[Dorigatti2020]: https://www.imperial.ac.uk/media/imperial-college/medicine/sph/ide/gida-fellowships/Imperial-College-COVID19-severity-10-02-2020.pdf
 [Autosea]: https://www.ntnu.edu/autosea
 [Milliampere]: https://www.ntnu.edu/autoferry
