updated corona project

--- a/_posts/2020-04-08-corona.md
+++ b/_posts/2020-04-08-corona.md
@@ -7,7 +7,7 @@ category: LTP
 
 Very much is at stake in policymaking during the ongoing coronavirus outbreak. The dilemma faced by politicians is this: Failure to control the spread of the virus may cause severe overload in the health system and cause thousands of deaths, while on the other hand the control measures may cause an unprecedented economic depression. Different strategies have been used by different countries. At the time of writing, it remains to see which country has chosen the best strategy. 
 
-At the core of this is a problem of state estimation in a complex dynamic system with significant time delays limited observability and several unknown parameters. If a country is to pursue any more refined strategy than absolute suppression or laissez-faire, then the infection control measures must be adapted to the situation at hand, based on estimates of the number of infections, infection rates, case fatality ratio etc. 
+At the core of this is a problem of state estimation in a complex dynamic system with significant time delays, limited observability and several unknown parameters. If a country is to pursue any more refined strategy than absolute suppression or laissez-faire, then the infection control measures must be adapted to the situation at hand, based on estimates of the number of infections, infection rates, case fatality ratio etc. 
 
 Models of different levels of fidelity have been used in attempts to understand and predict the spread of the coronavirus. Other researchers have focused on estimating key parameters such as the reproduction number and the case fatality ratio. Estimating these parameters has been difficult, because the researchers have had to use non-representative sample populations (e.g., the predominantly old population onboard Diamond Princess). 
 
