--- a/_posts/2020-04-11-lmipda.md
+++ b/_posts/2020-04-11-lmipda.md
@@ -19,33 +19,34 @@ It is possible to express the optimal solution to multi-target tracking under st
 
 
 ## Scope
-During the last year, two MSc students affiliated with the Autoferry project have experimented with stereo vision algorithms for the autonomous ferry application. The goal of the present project is to continue this work, and demonstrate stereo vision in the operational environment of the autonomous ferry. This can be a single-student project, or a collaboration between two or more students. The project will, at least in the early phases, use the same equipment that has been used in the on-going MSc project on stereo vision.  
-
-|<img src="{{site.url}}/assets/stereobuilding.png" width="710"> | 
-| Stereo imagery with extracted corner features. A calibration board can barely be seen in the lower left corners of the images.  From Olsen and Theimann (2020). | 
+In this project you will investigate the potential of LMIPDA as a lightweight alternative to JIPDA. 
+The aim is both to understand the relationship between LMIPDA and the methods mentioned above, and to quantify the gains and losses
+that one could expect by replacing a PHD filter or a JIPDA with an LMIPDA. 
+The work is intended to mainly rely on simulations, but real data can also be used. 
 
 
 ## Proposed Tasks for the 5th year project
 
-1. Mounting of stereo equipment on MilliAmpere, and integration with navigation system.
-2. Verification of intrinsic calibration. Extrinsic calibration against navigation system. 
-3. Experiment: Record video of other boats with ground truth through GPS and/or lidar.
-4. Investigate the performance of different stereo vision algorithms with ground truth.
+1. Make yourself familiar with the standard model of multi-target tracking and popular methods such as JIPDA, PHD filter, CPHD filter and PMBM filter.
+2. Study the PMBM-based derivation of the JIPDA, and do the required derivations to replace the JIPDA with LMIPDA.
+3. Design simulation scenarios and benchmark measures to compare tracking methods. 
+4. Compare basic LMIPDA, PMBM-based LMIPDA, PHD filter, basic JIPDA, PMBM-based JIPDA and CPHD filter. 
 5. Write report.
 
 ## Proposed Tasks for the master thesis
 
 The project work aims to be extended into a master thesis for the spring of 2021. Several directions are possible depending on the interest of the student. 
 
-* Multi-target and extended object tracking by means of stereo vision. 
-* Simultaneous localization and mapping (SLAM) by means of stereo vision. 
-* Stereo vision for infrared cameras.
-* Integration of stereo vision in closed-loop collision avoidance experiments. 
-* Fusion of stereo vision with additional active and passive sensors. 
-* Investigation of global methods for stereo vision instead of local methods. 
+* Development of an LMIPDA method tailored to be used in a drone-based tracking system. 
+* Can strategies such as those used in an LMIPDA also be used in a more complex JIPDA or PMBM filter? One project that possibly could be addressed in this manner is clustering and cluster-splitting of nearby tracks. 
+* Integration of multiple models using the IMM framework.
+* Integration of wake models. 
+* Integration of visibility probabilities. 
+* Benchmarking on several real world data sets. 
 
 ## Contact
-For more information, contact supervisor [Edmund F. Brekke](http://www.ntnu.no/ansatte/edmundfo).
+For more information, contact supervisors [Edmund F. Brekke](http://www.ntnu.no/ansatte/edmundfo) or
+[Lars-Christian Tokle](https://www.ntnu.edu/employees/lars-christian.n.tokle) 
 
 ## References
 
