--- a/_posts/2020-04-11-lmipda.md
+++ b/_posts/2020-04-11-lmipda.md
@@ -50,6 +50,5 @@ For more information, contact supervisors [Edmund F. Brekke](http://www.ntnu.no/
 
 ## References
 
-* Olsen, T. (2020): “[Stereo vision using local methods for autonomous ferry](http://folk.ntnu.no/edmundfo/msc2019-2020/TrineOlsenStereoVision.pdf)”, Specialization project, NTNU. 
-* Theimann, L. (2020): “[Comparison of depth information from stereo camera and LiDAR](http://folk.ntnu.no/edmundfo/msc2019-2020/LinaTheimannStereoVision.pdf)”, Specialization project, NTNU. 
-* Olsen, T. and Theimann, L. (2020): “Stereo vision for autonomous ferry”, MSc thesis, NTNU. In writing.
+* Tokle, L.-C. (2018): “[Multi target tracking using random finite sets with a hybrid state space and approximations](https://ntnuopen.ntnu.no/ntnu-xmlui/bitstream/handle/11250/2575375/18666_FULLTEXT.pdf?sequence=1)”, MSc thesis, NTNU. 
+* Musicki, D. and La Scala B. (2008): “[Multi-target tracking in clutter without measurement assignment](https://ieeexplore.ieee.org/document/4655350)”, IEEE Transactions on Aerospace and Electronic Systems
