--- a/_posts/2020-04-11-lmipda.md
+++ b/_posts/2020-04-11-lmipda.md
@@ -52,3 +52,4 @@ For more information, contact supervisors [Edmund F. Brekke](http://www.ntnu.no/
 
 * Tokle, L.-C. (2018): “[Multi target tracking using random finite sets with a hybrid state space and approximations](https://ntnuopen.ntnu.no/ntnu-xmlui/bitstream/handle/11250/2575375/18666_FULLTEXT.pdf?sequence=1)”, MSc thesis, NTNU. 
 * Musicki, D. and La Scala B. (2008): “[Multi-target tracking in clutter without measurement assignment](https://ieeexplore.ieee.org/document/4655350)”, IEEE Transactions on Aerospace and Electronic Systems
+* Brekke, E. (2020): “[Fundamentals of Sensor Fusion](http://folk.ntnu.no/edmundfo/msc2019-2020/sf13chapters.pdf)”, See especially Chapter 13.
