updated twin of the canal

--- a/_posts/2020-04-19-ltp_canal.md
+++ b/_posts/2020-04-19-ltp_canal.md
@@ -9,6 +9,10 @@ Researchers at NTNU are developing an autonomous pedestrian ferry whose purpose 
 Having a good understanding of the traffic patterns in the canal will make it easier for the ferry to interact smoothly with other boats in the canal. 
 It is therefore a goal to be able to conduct realistic simulations of all kinds of traffic scenarios that are likely to find place in the canal. 
 
+To achieve this, it is necessary both to register what happens in the canal, to comprehend what happens in the canal, and to generate and simulate  scenarios based on this. Thus, this problem involves both sensor fusion, statistical data analysis, automatic control and behaviour modeling. 
+
+
+
 
 
 |<img src="{{site.url}}/assets/predictionproblem.png" width="670"> | 
