--- a/_posts/2020-04-19-ltp_canal.md
+++ b/_posts/2020-04-19-ltp_canal.md
@@ -9,9 +9,12 @@ Researchers at NTNU are developing an autonomous pedestrian ferry whose purpose 
 Having a good understanding of the traffic patterns in the canal will make it easier for the ferry to interact smoothly with other boats in the canal. 
 It is therefore a goal to be able to conduct realistic simulations of all kinds of traffic scenarios that are likely to find place in the canal. 
 
-To achieve this, it is necessary both to register what happens in the canal, to comprehend what happens in the canal, and to generate and simulate  scenarios based on this. Thus, this problem involves both sensor fusion, statistical data analysis, automatic control and behaviour modeling. 
+To achieve this, it is necessary both to register what happens in the canal, to comprehend what happens in the canal, and to generate and simulate  scenarios based on this. This problem involves both sensor fusion, statistical data analysis, automatic control and behaviour modeling. Consequently, this project builds upon several threads in research and MSc projects at ITK. 
 
-
+* A Unity-based simulator for the autonomous ferry prototype MilliAmpere was developed as part of the EiT village Autoferge during Spring 2018. This simulator is current being further developed by the MSc student Kjetil Vasstein at ITK. 
+* Three previous MSc students, Simen Hexeberg, Bjørnar Dalsnes and David Wu, have developed methods for long-term prediction of vessel trajectories. These methods analyze patterns in historical data from the Automatic Identification System (AIS), and attempts to guess the motion of a ship by comparing its current position and velocity with these patterns. 
+* Two MSc students at ITK, Jesper Pedersen and Rolf Klæboe, have worked on automatic harbor surveillance for this purpose. To support these projects a sensor station with a radar and a camera has been mounted on the Brattøra side of the canal. 
+* the Autosea project have developed several collision avoidance methods for autonomous surface vessels. Such techniques will necessarily have to be part of a realistic digital twin of the harbor environment. 
 
 
 
@@ -20,7 +23,7 @@ To achieve this, it is necessary both to register what happens in the canal, to 
 
 ## Scope
 
-Bla bla 
+The main goal of this project is to enable realistic simulations of traffic in the harbor environment. The results will be integrated in the aforementioned MilliAmpere simulator. It is important to understand that this is just a part of the simulator (other parts being, e.g., sensor modeling), but it is a very important part. 
 
 ## Proposed Tasks for the 5th year project
 
