updated twin of the canal

--- a/_posts/2020-04-19-ltp_canal.md
+++ b/_posts/2020-04-19-ltp_canal.md
@@ -23,12 +23,14 @@ To achieve this, it is necessary both to register what happens in the canal, to 
 
 ## Scope
 
-The main goal of this project is to enable realistic simulations of traffic in the harbor environment. The results will be integrated in the aforementioned MilliAmpere simulator. It is important to understand that this is just a part of the simulator (other parts being, e.g., sensor modeling), but it is a very important part. 
+The overall goal of this project is to enable realistic simulations of traffic in the harbor environment. The results will be integrated in the aforementioned MilliAmpere simulator. It is important to understand that this is just a part of the simulator (other parts being, e.g., sensor modeling), but it is a very important part. 
 
 ## Proposed Tasks for the 5th year project
 
-* Bla bla
-* Bla Bla
+The main goal of the specialization project is to make sure that we have a good analysis of data from the canal. To have an optimal starting point for the specialization project, the candidate may record additional data during the summer (when the canal is at its busiest) in collaboration with other final year students and PhD candidates working on situational awareness for the autonomous ferry. 
+
+* Data consolidation: What are the available data and simulation tools at the beginning of the project? 
+* Run detection and tracking methods on available camera and radar data. 
 * Bla Bla
 * Bla Bla
 * Write report. 
