updated twin of the canal

--- a/_posts/2020-04-19-ltp_canal.md
+++ b/_posts/2020-04-19-ltp_canal.md
@@ -30,8 +30,8 @@ The overall goal of this project is to enable realistic simulations of traffic i
 The main goal of the specialization project is to make sure that we have a good analysis of data from the canal. To have an optimal starting point for the specialization project, the candidate may record additional data during the summer (when the canal is at its busiest) in collaboration with other final year students and PhD candidates working on situational awareness for the autonomous ferry. 
 
 * Data consolidation: What are the available data and simulation tools at the beginning of the project? 
-* Run detection and tracking methods on available camera and radar data. 
-* Bla Bla
+* Run detection and tracking methods on available camera and radar data. Most of this machinery will be available from previous projects, but it is important to become familiar with the framework, and also to perform quality checks on the output. 
+* Train a long-term prediction method with the results from the tracking system. 
 * Bla Bla
 * Write report. 
 
