--- a/_posts/2020-04-19-ltp_canal.md
+++ b/_posts/2020-04-19-ltp_canal.md
@@ -23,21 +23,22 @@ To achieve this, it is necessary both to register what happens in the canal, to 
 
 ## Scope
 
-The overall goal of this project is to enable realistic simulations of traffic in the harbor environment. The results will be integrated in the aforementioned MilliAmpere simulator. It is important to understand that this is just a part of the simulator (other parts being, e.g., sensor modeling), but it is a very important part. 
+The overall goal of this project is to enable realistic simulations of traffic in the harbour environment. The results will be integrated in the aforementioned MilliAmpere simulator. It is important to understand that this is just a part of the simulator (other parts being, e.g., sensor modeling), but it is a very important part. 
 
 ## Proposed Tasks for the 5th year project
 
 The main goal of the specialization project is to make sure that we have a good analysis of data from the canal. To have an optimal starting point for the specialization project, the candidate may record additional data during the summer (when the canal is at its busiest) in collaboration with other final year students and PhD candidates working on situational awareness for the autonomous ferry. 
 
 * Data consolidation: What are the available data and simulation tools at the beginning of the project? 
+* Literature study: What are available techniques for estimating behaviour models for maritime traffic?
 * Run detection and tracking methods on available camera and radar data. Most of this machinery will be available from previous projects, but it is important to become familiar with the framework, and also to perform quality checks on the output. 
 * Train a long-term prediction method with the results from the tracking system. 
-* Bla Bla
+* Validate the long-term prediction method with results from the tracking system. 
 * Write report. 
 
 ## Proposed Tasks for the master thesis
 
-Several variations of MSc projects are possible, depending on the findings of the specialization project. Some suggestions are proposed below. 
+In the master thesis the candidate is expected to make several additional strides towards the overall goal of realistic traffic simulations. 
 
 * Bla bla
 * Bla bla
