updated twin of the canal

--- a/_posts/2020-04-19-ltp_canal.md
+++ b/_posts/2020-04-19-ltp_canal.md
@@ -38,11 +38,13 @@ The main goal of the specialization project is to make sure that we have a good 
 
 ## Proposed Tasks for the master thesis
 
-In the master thesis the candidate is expected to make several additional strides towards the overall goal of realistic traffic simulations. 
+In the master thesis the candidate is expected to make several additional strides towards the overall goal of realistic traffic simulations. The scope involves some fundamental tasks that must be accomplished, and several open-ended research questions. 
 
-* Bla bla
-* Bla bla
-* Bla bla
+* Include vessel types (kayak, motorboat, tourist ferry, etc.) as part of the prediction scheme.
+* Include shore constraints and traffic rules (also known as the "COLREGS") as part of the prediction scheme.
+* Perform simulations based on the prediction method. Evaluate how realistic the simulations appear. To which extent should the predictions be data driven, and to which extent should they use models of motion control systems?
+* Simulate interactions between different vessels in the canal. Here MPC-based collision avoidance methods such as those developed in the Autosea project will be a natural starting point. To which extent does the output from these resemble the behaviour of manned vessels? Can they be tuned to provide more human-like behaviour? 
+* Can machine learning techniques give more realistic simulations? Should machine learning be used primarily to tune statistical and control-theoretic techniques, or should machine-learning be used in a more end-to-end type manner?
 
 
 |<img src="{{site.url}}/assets/ais-data-trd.png" width="670"> | 
