updated twin of the canal

--- a/_posts/2020-04-19-ltp_canal.md
+++ b/_posts/2020-04-19-ltp_canal.md
@@ -57,7 +57,9 @@ In the master thesis the candidate is expected to make several additional stride
 
 ## Contact
 
-Supervisors: [Edmund Brekke] and [Adil Rasheed].  
+Supervisors: [Edmund Brekke], [Adil Rasheed], [Emil Thyri] and [Praveen Jain].  
 
 [Edmund Brekke]: www.ntnu.edu/employees/edmund.brekke
 [Adil Rasheed]: https://www.ntnu.no/ansatte/adil
+[Emil Thyri]: https://www.ntnu.edu/employees/emil.h.thyri
+[Praveen Jain]: https://www.ntnu.edu/employees/ravinder.p.k.jain
