--- a/_posts/2020-04-19-ltp_canal.md
+++ b/_posts/2020-04-19-ltp_canal.md
@@ -54,6 +54,8 @@ In the master thesis the candidate is expected to make several additional stride
 * Ahmad et al. (2016). "<a href="https://ieeexplore.ieee.org/document/7765149">Bayesian Intent Prediction in Object Tracking Using Bridging Distributions.</a>" IEEE Transactions on Cybernetics , vol. 48, no. 1. [Ahmad2016]  
 * Hexeberg, S. (2017). "<a href="https://brage.bibsys.no/xmlui/handle/11250/2452108">AIS-based Vessel Trajectory Prediction for ASV Collision Avoidance.</a>" MSc thesis, NTNU. [Hexeberg2017]  
 * Dalsnes, B. (2018). "<a href="https://brage.bibsys.no/xmlui/handle/11250/2557943">Long-term Vessel Prediction Using AIS Data.</a>" MSc thesis, NTNU. [Dalsnes2018]
+* Meyer , E., Robinson, H., Rasheed, A. and San, O. (2019). "<a href="https://arxiv.org/pdf/1912.08578.pdf">aming an autonomous surface vehicle for path following and collision avoidance using deep reinforcement learning.</a>" Preprint submitted to Elsevier. [Meyer2019]
+
 
 ## Contact
 
