google maps of kristiansund and tonsberg

--- a/_posts/2020-04-19-ltp_canal.md
+++ b/_posts/2020-04-19-ltp_canal.md
@@ -36,6 +36,9 @@ The main goal of the specialization project is to make sure that we have a good 
 * Validate the long-term prediction method with results from the tracking system. 
 * Write report. 
 
+|<img src="{{site.url}}/assets/kristiansundtonsberg.png" width="700"> | 
+| Other cities in Norway (Kristiansund and Tønsberg) where autonomous ferries are wanted. | 
+
 ## Proposed Tasks for the master thesis
 
 In the master thesis the candidate is expected to make several additional strides towards the overall goal of realistic traffic simulations. The scope involves some fundamental tasks that must be accomplished, and several open-ended research questions. 
