updated twin of the canal

--- a/_posts/2020-04-19-ltp_canal.md
+++ b/_posts/2020-04-19-ltp_canal.md
@@ -17,7 +17,8 @@ To achieve this, it is necessary both to register what happens in the canal, to 
 * the Autosea project have developed several collision avoidance methods for autonomous surface vessels. Such techniques will necessarily have to be part of a realistic digital twin of the harbor environment. 
 
 
-
+|<img src="{{site.url}}/assets/brattora.jpg" width="700"> | 
+| View across the Trondheim City Canal towards Brattøra. | 
 
 
 ## Scope
@@ -35,8 +36,8 @@ The main goal of the specialization project is to make sure that we have a good 
 * Validate the long-term prediction method with results from the tracking system. 
 * Write report. 
 
-|<img src="{{site.url}}/assets/kristiansundtonsberg.png" width="700"> | 
-| Other cities in Norway (Kristiansund and Tønsberg) where autonomous ferries are wanted. | 
+|<img src="{{site.url}}/assets/kristiansund_with_example_transits.png" width="700"> | 
+| Examples of ferry transits in Kristiansund, which is another city where autonomous ferries are wanted | 
 
 ## Proposed Tasks for the master thesis
 
