updated twin of the canal

--- a/_posts/2020-04-19-ltp_canal.md
+++ b/_posts/2020-04-19-ltp_canal.md
@@ -17,8 +17,8 @@ To achieve this, it is necessary both to register what happens in the canal, to 
 * the Autosea project have developed several collision avoidance methods for autonomous surface vessels. Such techniques will necessarily have to be part of a realistic digital twin of the harbor environment. 
 
 
-|<img src="{{site.url}}/assets/brattora.jpg" width="700"> | 
-| View across the Trondheim City Canal towards Brattøra. | 
+|<img src="{{site.url}}/assets/lowestpd.png" width="700"> | 
+| Still image recorded from the sensor station at Brattøra. | 
 
 
 ## Scope
