updated twin of the canal

--- a/_posts/2020-04-19-ltp_canal.md
+++ b/_posts/2020-04-19-ltp_canal.md
@@ -53,7 +53,7 @@ In the master thesis the candidate is expected to make several additional stride
 | The fundamental problem of long-term prediction: Standard kinematic models yield very large uncertainties after a couple of minutes. One must guess the other vessel's intentions if more accurate predictions are desired. | 
 
 |<img src="{{site.url}}/assets/ais-data-trd.png" width="670"> | 
-| Historical AIS data show many patterns for how ships tend to move. Understanding of these patterns can be used to plan trajectories so that dangerous situations are prevented from arising.  | 
+| Historical AIS data show many patterns for how ships tend to move. Can we establish similar patterns for a harbour area by means of radar and camera based tracking?  | 
 
 ## References
 * Ahmad et al. (2016). "<a href="https://ieeexplore.ieee.org/document/7765149">Bayesian Intent Prediction in Object Tracking Using Bridging Distributions.</a>" IEEE Transactions on Cybernetics , vol. 48, no. 1.  
