--- a/_posts/2020-04-19-ltp_canal.md
+++ b/_posts/2020-04-19-ltp_canal.md
@@ -11,6 +11,7 @@ It is therefore a goal to be able to conduct realistic simulations of all kinds 
 
 To achieve this, it is necessary both to register what happens in the canal, to comprehend what happens in the canal, and to generate and simulate  scenarios based on this. This problem involves both sensor fusion, statistical data analysis, automatic control and behaviour modeling. Consequently, this project builds upon several threads in research and MSc projects at ITK. 
 
+
 * A Unity-based simulator for the autonomous ferry prototype MilliAmpere was developed as part of the EiT village Autoferge during Spring 2018. This simulator is current being further developed by the MSc student Kjetil Vasstein at ITK. 
 * Three previous MSc students, Simen Hexeberg, Bjørnar Dalsnes and David Wu, have developed methods for long-term prediction of vessel trajectories. These methods analyze patterns in historical data from the Automatic Identification System (AIS), and attempts to guess the motion of a ship by comparing its current position and velocity with these patterns. 
 * Two MSc students at ITK, Jesper Pedersen and Rolf Klæboe, have worked on automatic harbor surveillance for this purpose. To support these projects a sensor station with a radar and a camera has been mounted on the Brattøra side of the canal. 
@@ -24,6 +25,9 @@ To achieve this, it is necessary both to register what happens in the canal, to 
 ## Scope
 
 The overall goal of this project is to enable realistic simulations of traffic in the harbour environment. The results will be integrated in the aforementioned MilliAmpere simulator. It is important to understand that this is just a part of the simulator (other parts being, e.g., sensor modeling), but it is a very important part. The project is intended for a single student, but can also be solved as a collaboration of two or more students. 
+
+|<img src="{{site.url}}/assets/simunity.png" width="700"> | 
+| Simulation of MilliAmpere using the Unity-based simulator. | 
 
 ## Proposed Tasks for the 5th year project
 
