--- a/_posts/2020-04-19-ltp_canal.md
+++ b/_posts/2020-04-19-ltp_canal.md
@@ -12,10 +12,10 @@ It is therefore a goal to be able to conduct realistic simulations of all kinds 
 To achieve this, it is necessary both to register what happens in the canal, to comprehend what happens in the canal, and to generate and simulate  scenarios based on this. This problem involves both sensor fusion, statistical data analysis, automatic control and behaviour modeling. Consequently, this project builds upon several threads in research and MSc projects at ITK. 
 
 
-* A Unity-based simulator for the autonomous ferry prototype MilliAmpere was developed as part of the EiT village Autoferge during Spring 2018. This simulator is current being further developed by the MSc student Kjetil Vasstein at ITK. 
+* A [Unity-based simulator] for the autonomous ferry prototype MilliAmpere was developed as part of the EiT village Autoferge during Spring 2018. This simulator is currently being further developed by the MSc student Kjetil Vasstein at ITK. 
 * Three previous MSc students, Simen Hexeberg, Bjørnar Dalsnes and David Wu, have developed methods for long-term prediction of vessel trajectories. These methods analyze patterns in historical data from the Automatic Identification System (AIS), and attempts to guess the motion of a ship by comparing its current position and velocity with these patterns. 
 * Two MSc students at ITK, Jesper Pedersen and Rolf Klæboe, have worked on automatic harbor surveillance for this purpose. To support these projects a sensor station with a radar and a camera has been mounted on the Brattøra side of the canal. 
-* the Autosea project have developed several collision avoidance methods for autonomous surface vessels. Such techniques will necessarily have to be part of a realistic digital twin of the harbor environment. 
+* The [Autosea project] have developed several collision avoidance methods for autonomous surface vessels. Such techniques will necessarily have to be part of a realistic digital twin of the harbor environment. 
 
 
 |<img src="{{site.url}}/assets/lowestpd.png" width="700"> | 
@@ -74,3 +74,5 @@ Supervisors: [Edmund Brekke], [Adil Rasheed], [Emil Thyri] and [Praveen Jain].
 [Adil Rasheed]: https://www.ntnu.no/ansatte/adil
 [Emil Thyri]: https://www.ntnu.edu/employees/emil.h.thyri
 [Praveen Jain]: https://www.ntnu.edu/employees/ravinder.p.k.jain
+[Autosea project]: https://www.ntnu.edu/autosea
+[Unity-based simulator]: http://folk.ntnu.no/edmundfo/msc2020-2021/eitdigtwin.pdf
