updated twin of the canal

--- a/_posts/2020-04-19-ltp_canal.md
+++ b/_posts/2020-04-19-ltp_canal.md
@@ -16,7 +16,7 @@ To achieve this, it is necessary both to register what happens in the canal, to 
 
 
 * A [Unity-based simulator] for the autonomous ferry prototype MilliAmpere was developed as part of the EiT village Autoferge during Spring 2018. This simulator is currently being further developed by the MSc student Kjetil Vasstein at ITK. 
-* Three previous MSc students, [Simen Hexeberg], [Bjørnar Dalsnes] and David Wu, have developed methods for long-term prediction of vessel trajectories. These methods analyze patterns in historical data from the Automatic Identification System (AIS), and attempts to guess the motion of a ship by comparing its current position and velocity with these patterns. 
+* Three previous MSc students, [Simen Hexeberg], [Bjørnar Dalsnes] and [David Wu], have developed methods for long-term prediction of vessel trajectories. These methods analyze patterns in historical data from the Automatic Identification System (AIS), and attempts to guess the motion of a ship by comparing its current position and velocity with these patterns. 
 * Two MSc students at ITK, [Jesper Pedersen] and Rolf Klæboe, have worked on automatic harbor surveillance for this purpose. To support these projects a sensor station with a radar and a camera has been mounted on the Brattøra side of the canal. 
 * The [Autosea project] have developed several collision avoidance methods for autonomous surface vessels. Such techniques will necessarily have to be part of a realistic digital twin of the harbor environment. 
 
@@ -82,3 +82,4 @@ Supervisors: [Edmund Brekke], [Adil Rasheed], [Emil Thyri] and [Praveen Jain].
 [Jesper Pedersen]: http://folk.ntnu.no/edmundfo/msc2019-2020/masteroppgaveJesperPedersenReduced.pdf
 [Simen Hexeberg]: https://ieeexplore.ieee.org/document/8009762
 [Bjørnar Dalsnes]: https://www.researchgate.net/publication/329352418_The_Neighbor_Course_Distribution_Method_with_Gaussian_Mixture_Models_for_AIS-based_Vessel_Trajectory_Prediction
+[David Wu]: https://ntnuopen.ntnu.no/ntnu-xmlui/handle/11250/2625767?locale-attribute=en
