updated twin of the canal

--- a/_posts/2020-04-19-ltp_canal.md
+++ b/_posts/2020-04-19-ltp_canal.md
@@ -67,7 +67,7 @@ In the master thesis the candidate is expected to make several additional stride
 * Hexeberg, S. (2017). "<a href="https://brage.bibsys.no/xmlui/handle/11250/2452108">AIS-based Vessel Trajectory Prediction for ASV Collision Avoidance.</a>" MSc thesis, NTNU. 
 * Dalsnes, B. (2018). "<a href="https://brage.bibsys.no/xmlui/handle/11250/2557943">Long-term Vessel Prediction Using AIS Data.</a>" MSc thesis, NTNU. 
 * Meyer , E., Robinson, H., Rasheed, A. and San, O. (2019). "<a href="https://arxiv.org/pdf/1912.08578.pdf">Taming an autonomous surface vehicle for path following and collision avoidance using deep reinforcement learning.</a>" Preprint submitted to Elsevier. 
-
+* Brekke et al (2019). "<a href="https://iopscience.iop.org/article/10.1088/1742-6596/1357/1/012020">The Autosea project: Developing closed-loop target tracking and collision avoidance systems.</a>" Proceedings of ICMASS 2019, Trondheim, Norway. 
 
 ## Contact
 
