updated twin of the canal

--- a/_posts/2020-04-19-ltp_canal.md
+++ b/_posts/2020-04-19-ltp_canal.md
@@ -8,7 +8,7 @@ category: LTP
 
 ## Background
 
-Researchers at NTNU are in collaboration with [Zeabus AS] 
+Researchers at NTNU are in collaboration with [Zeabuz AS] 
 developing an autonomous pedestrian ferry whose purpose is to cross the Trondheim City Canal. 
 Having a good understanding of the traffic patterns in the canal will make it easier for the ferry to interact smoothly with other boats in the canal. 
 It is therefore a goal to be able to conduct realistic simulations of all kinds of traffic scenarios that are likely to find place in the canal. 
@@ -84,4 +84,4 @@ Supervisors: [Edmund Brekke], [Adil Rasheed], [Emil Thyri] and [Praveen Jain].
 [Simen Hexeberg]: https://ieeexplore.ieee.org/document/8009762
 [Bjørnar Dalsnes]: https://www.researchgate.net/publication/329352418_The_Neighbor_Course_Distribution_Method_with_Gaussian_Mixture_Models_for_AIS-based_Vessel_Trajectory_Prediction
 [David Wu]: https://ntnuopen.ntnu.no/ntnu-xmlui/handle/11250/2625767?locale-attribute=en
-[Zeabus AS]: https://zeabuz.com
+[Zeabuz AS]: https://zeabuz.com
