nonsense labell for revolt

--- a/_posts/2019-04-26-revolt-sf.md
+++ b/_posts/2019-04-26-revolt-sf.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: Sensor fusion for ReVolt
-category: SF
+category: NA
 ---
 ## Background
 The ReVolt is an unmanned and zero-emission ship concept designed for short sea shipping along the coast of Norway. The ReVolt was designed for low energy demand and the propulsion system is fully electric. The ReVolt has 2 stern pods and 1 retractable azimuth thruster in the bow.
@@ -25,7 +25,7 @@ The project can possibly be expanded into different projects for two or more col
 
 1. Conduct experiments early in the autumn semester to gather data from relevant scenarios which will guide the development of the sensor fusion and collision avoidance system. 
 2. Investigate the experimental data with a particular focus on challenges such as multi-target situations, occlusions, false tracks and misdetections, adverse weather conditions, problems with computational complexity, navigation uncertainty etc. 
-3. Based on identified challenges, propose solutions and mitigations. The candidate should check whether these can be based on previous and current developments in the Autosea, Autoferry and Autosit projects, or open source implementations on the web, to avoid reinventing the wheel unncessarily. 
+3. Based on identified challenges, propose solutions and mitigations. The candidate should check whether these can be based on previous and current developments in the Autosea, Autoferry and Autosit projects, or open source implementations on the web, to avoid reinventing the wheel unnecessarily. 
 4. Implement solutions to the most critical challenges, and verify on recorded data. Algorithmic developments should also as much as possible be tested in simulations.  
 5. Write report and make a plan for the MSc project. 
 
