small changes on ltp canal

--- a/_posts/2020-04-19-ltp_canal.md
+++ b/_posts/2020-04-19-ltp_canal.md
@@ -29,7 +29,7 @@ To achieve this, it is necessary both to register what happens in the canal, to 
 
 ## Scope
 
-The overall goal of this project is to enable realistic simulations of traffic in the harbour environment. The results will be integrated in the aforementioned MilliAmpere simulator. It is important to understand that this is just a part of the simulator (other parts being, e.g., sensor modeling), but it is a very important part. The project is intended for a single student, but can also be solved as a collaboration of two or more students. 
+The overall goal of this project is to enable realistic simulations of traffic in the harbour environment. The results will be integrated in the aforementioned MilliAmpere simulator. This is just a part of the simulator (other parts being, e.g., sensor modeling), but it is a very important part. The project is intended for a single student, but can also be solved as a collaboration of two or more students. 
 
 
 
