small changes on ltp canal

--- a/_posts/2020-04-19-ltp_canal.md
+++ b/_posts/2020-04-19-ltp_canal.md
@@ -29,17 +29,17 @@ To achieve this, it is necessary both to register what happens in the canal, to 
 
 ## Scope
 
-The overall goal of this project is to enable realistic simulations of traffic in the harbour environment. The results will be integrated in the aforementioned MilliAmpere simulator. This is just a part of the simulator (other parts being, e.g., sensor modeling), but it is a very important part. The project is intended for a single student, but can also be solved as a collaboration of two or more students. 
+The overall goal of this project is to build comprehension of traffic and other activities in the harbour environment where milliAmpere is intended to operate. A key objective is to provide meaningful representations, content and statistics from recorded sensor data, that can be used in simulations. The project is intended for a single student, but can also be solved as a collaboration of two or more students. 
 
 
 
 ## Proposed Tasks for the 5th year project
 
-The main goal of the specialization project is to make sure that we have a good analysis of data from the canal. To have an optimal starting point for the specialization project, the candidate may record additional data during the summer (when the canal is at its busiest) in collaboration with other final year students and PhD candidates working on situational awareness for the autonomous ferry. 
+The main goal of the specialization project is to make sure that we have a sufficient amount of data from the City Canal, and that we are able to use sensor fusion algorithms to extract meaningful and useful information from the data. This will build directly on previous master thesis projects on canal surveillance. The student is encouraged to participate in recording of data during the summer (when the canal is at its busiest) in collaboration with other final year students and PhD candidates working on situational awareness for the autonomous ferry. The following tasks will most likely be central in the specialization project:
 
-* Data consolidation: What are the available data and simulation tools at the beginning of the project? 
 * Literature study: What are available techniques for estimating behaviour models for maritime traffic?
-* Run detection and tracking methods on available camera and radar data. Most of this machinery will be available from previous projects, but it is important to become familiar with the framework, and also to perform quality checks on the output. 
+* Data consolidation: Are the data sufficient to get a good comprehension of activities and traffic in the canal? Are additional data from the sensor station opposite Ravnkloa necessary? Are data from additional sensors needed? 
+* Run detection and tracking methods on available camera and radar data. Several possible methods for detection and tracking are available. Assess performance. 
 * Train a long-term prediction method with the results from the tracking system. 
 * Validate the long-term prediction method with results from the tracking system. 
 * Write report. 
@@ -49,13 +49,12 @@ The main goal of the specialization project is to make sure that we have a good 
 
 ## Proposed Tasks for the master thesis
 
-In the master thesis the candidate is expected to make several additional strides towards the overall goal of realistic traffic simulations. The scope involves some fundamental tasks that must be accomplished, and several open-ended research questions. 
-
+* Make an assessment of additional information that can be extracted from the data. Such information can be vessel types, humans, road vehricles, weather information, etc. 
 * Include vessel types (kayak, motorboat, tourist ferry, etc.) as part of the prediction scheme.
 * Include shore constraints and traffic rules (also known as the "COLREGS") as part of the prediction scheme.
 * Perform simulations based on the prediction method. Evaluate how realistic the simulations appear. To which extent should the predictions be data driven, and to which extent should they use models of motion control systems?
-* Simulate interactions between different vessels in the canal. Here MPC-based collision avoidance methods such as those developed in the Autosea project will be a natural starting point. To which extent does the output from these resemble the behaviour of manned vessels? Can they be tuned to provide more human-like behaviour? 
-* Can machine learning techniques give more realistic simulations? Should machine learning be used primarily to tune statistical and control-theoretic techniques, or should machine-learning be used in a more end-to-end type manner?
+
+The last task may possible be done in collaboration with [Simulation-based evaluation of autonomous guidance systems with collision avoidance functionality].
 
 
 |<img src="{{site.url}}/assets/ais-data-trd.png" width="670"> | 
@@ -83,3 +82,4 @@ Supervisors: [Edmund Brekke], [Adil Rasheed], [Emil Thyri] and [Praveen Jain].
 [Bjørnar Dalsnes]: https://www.researchgate.net/publication/329352418_The_Neighbor_Course_Distribution_Method_with_Gaussian_Mixture_Models_for_AIS-based_Vessel_Trajectory_Prediction
 [David Wu]: https://ntnuopen.ntnu.no/ntnu-xmlui/handle/11250/2625767?locale-attribute=en
 [Zeabuz AS]: https://zeabuz.com
+[Simulation-based evaluation of autonomous guidance systems with collision avoidance functionality]: https://autoferry.github.io/colav/2020/04/16/simulation-based-validation/
